# Editron

./: .gitignore  Cargo.toml  README.md  input.drive  input.edt
Notes/: Compiler.md
docs/: Frame.md  Lexer.md  Parser.md  Track.md  Video.md  filters.md
src/: cli.rs  engine.rs  filter.rs  frame.rs  io.rs  lexer.rs  lib.rs  main.rs  parser.rs  text.rs
src/experiments/: audio_image_conversion.rs  mod.rs
src/filters/: gaussian_blur.rs  interpolation.rs  mod.rs  point_ops.rs
src/io/: io.rs  video_io.rs
src/media/: clip.rs  frame.rs  mod.rs  track.rs  video.rs
src/pipeline/: kernel.rs  mod.rs  pipeline.rs
stdlib/: advanced.drive  audio.drive  color.drive  core.drive  effects.drive  image.edt  kernel.drive  mask.drive  utility.drive  vision.edt
