[package]
name = "drive_v1"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib","rlib"]
name = "drive"
path = "src/lib.rs"

[dependencies]
ffmpeg-next = "8.1.0"
fontdue = "0.9.3"
image = "0.25.10"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "VideoDecoder",
    "VideoEncoder",
    "VideoFrame",
    "AudioDecoder",
    "AudioEncoder"
]}

symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ffmpeg-next = "8.1.0"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
