[package]
name = "drive"
version = "1.0.0"
edition = "2024"

[lib]
name = "drive"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fontdue = "0.9.3"
hound = "3.5"
image = "0.25.10"
mp4 = "0.14.0"
openh264 = "0.9.3"
symphonia = { version = "0.5", features = ["all"] }